fix: resolved some problems by groups